# PSU_CAPSTONE_F2022

./: .gitignore  .gitmodules  LICENSE  PythonApplication1.py  README.md  http_module.h  onem2m.c
acme-cse-config/: README.md  (+2 more)
thingy/traffic_light_nrf52840/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  thingy91_nrf52840.overlay
thingy/traffic_light_nrf52840/include/events/: ae_command_event.h  ble_ctrl_event.h  peer_conn_event.h
thingy/traffic_light_nrf52840/src/: main.c
thingy/traffic_light_nrf52840/src/events/: ae_command_event.c  ble_ctrl_event.c  ble_data_event.c  cdc_data_event.c  module_state_event.c  peer_conn_event.c  uart_data_event.c
thingy/traffic_light_nrf52840/src/modules/: ae_command_handler.c  ble_handler.c  nus_handler.c  uart_handler.c  usb_cdc_handler.c
thingy/traffic_light_nrf9160/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  thingy91_nrf9160.overlay  thingy91_nrf9160_ns.overlay
thingy/traffic_light_nrf9160/include/: deployment_settings.h  led_state_def.h  onem2m.h  onem2m_payloads.h
thingy/traffic_light_nrf9160/include/events/: ae_event.h  ble_event.h  led_state_event.h  lte_event.h  modem_module_event.h  ut_event.h
thingy/traffic_light_nrf9160/include/modules/: http_module.h
thingy/traffic_light_nrf9160/src/: main.c  onem2m.c
thingy/traffic_light_nrf9160/src/events/: ae_event.c  ble_event.c  led_state_event.c  lte_event.c  modem_module_event.c  module_state_event.c  peer_conn_event.c  ut_event.c
thingy/traffic_light_nrf9160/src/modules/: ae_module.c  at_handler.c  http_module.c  led_module.c  lte_module.c  modules_common.c  nrf52840_parser.c  uart_handler.c
(+49 files in other folders)
